fixed alignment issues on mobile with buttons and overflow on right side of screen

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -32,6 +32,7 @@
  .box-container{
      margin-top:5%;
      display:flex;
+     margin-left:-20px;
  }
  
  
@@ -478,6 +479,7 @@ margin-top:-5% !important;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  overflow:hidden;
 }
 
     @media (min-width: 992px) {
